Changelog
=========

3.0.2 (unreleased)
------------------

- Nothing changed yet.


3.0.1 (2021-03-02)
------------------

- Drop support for Python 2 [Florian Bruhin]

- Add back official support for Python 3.6, I didn't realize it was still officially supported


2.6.1 (2021-02-16)
------------------

- Update to the current list of Trove classifiers.

- Officially support Python 3.8 and 3.9

- Drop official support for Python 3.5 and 3.6 (still works though).


2.6 (2019-11-02)
----------------

- Ran flake8 and black on the code, better formatting for
  classifiers.py generation.

- Support for PEP 517, setup.cfg-only packages. [Max Tyulin]

- Adds support for Markdown long_descriptions, if you set
  long_description_content_type to 'text/markdown'

- Installs Pygments to avoid an error message of you have
  syntax highlighted code in the long_description.


2.5 (2019-06-01)
----------------

- Fixed #35: Correctly restore ``sys.argv``.  [maurits]

- Added back the BusFactor test, the XMLRPC API supports it.

- #26: Adding a test to check for a development status classifier.

- #21: Accept the new project_urls distribution data.

- Now verifies that classifiers are valid, and that the license field
  and license classifiers match.

- The rating now again reflects if the long_description isn't valid ReST.

- #38: Recommendations for the License field has changed.


2.4 (2018-08-15)
----------------

- Get rid of the tests that rely on HTML scraping, it's too brittle.

- Update to use pypi.org instead of pypi.python.org
  [Andreas Lutro, Lennart Regebro]

- Added -n command line option to set the minimum rating needed for pyroma
  to return success, useful in scripts.
  [Scott Colby]


2.3.1 (2018-05-28)
------------------

- Fixed #12: Installation fails with a non-UTF8 locale under Python 3.
  [ericof, 4383, regebro]


2.3 (2017-11-28)
----------------

- Check that a classifier specifies the project license. [4383]
