@@ -2,6 +2,7 @@
 import os
 import sys
 import logging
+import tokenize
 
 from copy import copy
 from distutils import core
@@ -119,7 +120,12 @@ def run_setup(script_name, script_args=None, stop_after="run"):
             sys.argv[0] = script_name
             if script_args is not None:
                 sys.argv[1:] = script_args
-            with open(script_name, encoding="UTF-8") as f:
+
+            # Find the encoding
+            with open(script_name, "rb") as f:
+                encoding = tokenize.detect_encoding(f.readline)[0]
+
+            with open(script_name, "rt", encoding=encoding) as f:
                 exec(f.read(), glocals, glocals)
         finally:
             sys.argv = save_argv
